--- a/AssetsBGT.Service/bin/AssetsBGT.Service.dll.config
+++ b/AssetsBGT.Service/bin/AssetsBGT.Service.dll.config
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
+  <connectionStrings>
+      <add name="Connection" providerName="System.Data.SqlClient"
+            connectionString="Data Source=188.121.44.212;Initial Catalog=assetsDB;User ID=assets-user;Password=Sa123456"/>
+   </connectionStrings>
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
