--- a/Assets.DO/Assets.DO.csproj
+++ b/Assets.DO/Assets.DO.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Country.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\BaseResponse.cs" />
+    <Compile Include="Response\GetAllCountriesResponse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
