--- a/AssetsBGT.Service/Assets.Service.csproj
+++ b/AssetsBGT.Service/Assets.Service.csproj
@@ -95,9 +95,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviour\ServiceBehavior.cs" />
     <Compile Include="Implementation\CommonService.svc.cs">
       <DependentUpon>CommonService.svc</DependentUpon>
     </Compile>
+    <Compile Include="Interceptor\RequestMessageInterceptor.cs" />
     <Compile Include="Interface\ICommonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
