--- a/AssetsBGT.Service/bin/AssetsBGT.Service.dll.config
+++ b/AssetsBGT.Service/bin/AssetsBGT.Service.dll.config
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-      <add name="Connection" providerName="System.Data.SqlClient"
-            connectionString="Data Source=188.121.44.212;Initial Catalog=assetsDB;User ID=assets-user;Password=Sa123456"/>
-   </connectionStrings>
+    <add name="Connection" providerName="System.Data.SqlClient"
+          connectionString="Data Source=188.121.44.212;Initial Catalog=assetsDB;User ID=assets-user;Password=Sa123456"/>
+  </connectionStrings>
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
@@ -17,38 +17,43 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="Assets.Service.Interface.CommonService" behaviorConfiguration="serviceBehaviour">
+      <service name="Assets.Service.Implementation.CommonService" behaviorConfiguration="serviceBehaviour">
         <endpoint address="" binding="webHttpBinding" contract="Assets.Service.Interface.ICommonService" behaviorConfiguration="web">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8080/rest" />
-          </baseAddresses>
-        </host>
+      </service>
+      <service name="Assets.Service.Implementation.UserService" behaviorConfiguration="userBehaviour">
+        <endpoint address="" binding="webHttpBinding" contract="Assets.Service.Interface.IUserService" behaviorConfiguration="web">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
-      <serviceBehaviors>
-        <behavior  name="serviceBehaviour">
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="web">
-          <webHttp/>
+          <webHttp />
         </behavior>
       </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior name="serviceBehaviour">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+        <behavior name="userBehaviour">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>    
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
