--- a/AssetsBGT.Service/Assets.Service.csproj
+++ b/AssetsBGT.Service/Assets.Service.csproj
@@ -100,11 +100,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behaviour\ServiceBehavior.cs" />
+    <Compile Include="Behaviour\NonSecuredServiceBehavior.cs" />
+    <Compile Include="Behaviour\SecuredServiceBehavior.cs" />
     <Compile Include="Implementation\CommonService.svc.cs">
       <DependentUpon>CommonService.svc</DependentUpon>
     </Compile>
-    <Compile Include="Interceptor\RequestMessageInterceptor.cs" />
+    <Compile Include="Interceptor\NonSecuredRequestMessageInterceptor.cs" />
+    <Compile Include="Interceptor\SecuredRequestMessageInterceptor.cs" />
     <Compile Include="Interface\ICommonService.cs" />
     <Compile Include="Interface\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
