province and district added

--- a/Assets.DataAccessLayer/Assets.DataAccessLayer.csproj
+++ b/Assets.DataAccessLayer/Assets.DataAccessLayer.csproj
@@ -55,7 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementation\CountryRepository.cs" />
+    <Compile Include="Implementation\DistrictRepository.cs" />
+    <Compile Include="Implementation\ProvinceRepository.cs" />
     <Compile Include="Interface\ICountryRepository.cs" />
+    <Compile Include="Interface\IDistrictRepository.cs" />
+    <Compile Include="Interface\IProvinceRepository.cs" />
     <Compile Include="Interface\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
