--- a/Assets.DO/Assets.DO.csproj
+++ b/Assets.DO/Assets.DO.csproj
@@ -42,10 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Country.cs" />
+    <Compile Include="District.cs" />
+    <Compile Include="Neighborhood.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Province.cs" />
     <Compile Include="Response\BaseResponse.cs" />
     <Compile Include="Response\CheckCredentialResponse.cs" />
     <Compile Include="Response\GetAllCountriesResponse.cs" />
+    <Compile Include="Response\GetAllProvincesResponse.cs" />
+    <Compile Include="Response\GetDistrictsByCountryResponse.cs" />
+    <Compile Include="Town.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
