--- a/Assets.DO/Assets.DO.csproj
+++ b/Assets.DO/Assets.DO.csproj
@@ -41,18 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Country.cs" />
-    <Compile Include="District.cs" />
-    <Compile Include="Neighborhood.cs" />
+    <Compile Include="DataObject\Country.cs" />
+    <Compile Include="DataObject\District.cs" />
+    <Compile Include="Interface\IResponse.cs" />
+    <Compile Include="DataObject\Neighborhood.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Province.cs" />
+    <Compile Include="DataObject\Province.cs" />
     <Compile Include="Response\BaseResponse.cs" />
     <Compile Include="Response\CheckCredentialResponse.cs" />
     <Compile Include="Response\GetAllCountriesResponse.cs" />
+    <Compile Include="Response\GetAllNeighborhoodResponse.cs" />
     <Compile Include="Response\GetAllProvincesResponse.cs" />
     <Compile Include="Response\GetDistrictsByCountryResponse.cs" />
-    <Compile Include="Town.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="DataObject\Town.cs" />
+    <Compile Include="DataObject\User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
